# nolibc

./: .gitignore  .travis.yml  CMakeLists.txt
docs/: readme.md
include/: limits.h  stdalign.h
include/nolibc/extensions/: unmangled.h
include/nolibc/numerical/: bits.h
include/nolibc/predefined/: compiler.h  language.h
nolibc/: CMakeLists.txt
nolibc/cmake/: NoStdHeaders.cmake  NoStdLibrary.cmake
nolibc/include/: assert.h  errno.h  inttypes.h  iso646.h  limits.h  stdalign.h  stdbool.h  stddef.h  stdint.h  stdlib.h  stdnoreturn.h  string.h
nolibc/include/nolibc/: limits.h  null.h  restrict.h
nolibc/include/nolibc/builtins/: abort.h  assert.h  exit.h  memcpy.h  memset.h  strchr.h  strcpy.h  strerror.h  strlen.h
nolibc/include/nolibc/errors/: contracts.h
nolibc/include/nolibc/errors/handlers/: abort.h  ignore.h
nolibc/include/nolibc/extensions/: check.h  location.h  nil.h  stringify.h  unmangled.h
nolibc/include/nolibc/keywords/: alignas.h  alignof.h  inline.h  noreturn.h  restrict.h
nolibc/include/nolibc/numerical/: bits.h  limits.h
nolibc/include/nolibc/predefined/: architecture.h  build_flavour.h  endianness.h  operating_system.h
nolibc/include/nolibc/types/: boolean.h  constraint_handler.h  errno.h  rsize.h  size.h
tests/: CMakeLists.txt
tests/include/: helpers.h
tests/src/: stddef_tests.c  string_tests.c
tests/src/assert/: assert_calls_abort.c  assert_is_defined.c  assert_is_not_redefined.c  assert_is_overridable.c  assert_respects_ndebug.c  static_assert_is_defined.c  static_assert_is_not_redefined.c
tests/src/iso646/: and_works.c  bitand_works.c  not_eq_works.c  not_works.c  or_works.c  xor_works.c
tests/src/stddef/: null_is_defined.c
tests/src/stdlib/: abort_is_defined.c  abort_is_overridable.c
tests/src/string/: memset_is_defined.c  memset_works.c
